syntax = "proto3";

package go_example.testdata.protovalidate.v1;
option go_package = "github.com/studio-asd/go-example/proto/testdata/protovalidate/v1";

import "buf/validate/validate.proto";

message TestRequest {
    string test_required = 1 [(buf.validate.field).required = true];
    string test_string = 2;
    int32 test_int  = 3;
    string test_email = 4 [(buf.validate.field).cel = {
        id: "validate.email"
        message: "must be a valid email"
        expression: "this.isEmail()"
    }];
    string test_another_email = 5 [(buf.validate.field).cel = {
        id: "validate.email"
        message: "must be a valid email"
        expression: "this.isEmail()"
    }];
    string test_ip = 6 [(buf.validate.field).cel = {
        id: "validate.ip"
        message: "must be a valid ip"
        expression: "this.isIp()"
    }];
    repeated string repeated_string = 7 [(buf.validate.field).repeated = {
        max_items: 1
    }];
}
